@@ -14,6 +14,7 @@ my $iDump = 0;
 # This test returns no results (but we should not get an HTTP error):
 &my_test('normal', $WWW::Search::Test::bogus_query, 0, 0, $iDebug);
 TEST_NOW:
+$iDebug = 0; # for debugging
 $iDump = 0; # for debugging
 &my_test('normal', 'disest'.'ablishmentarianistic', 1, 9, $iDebug, $iDump);
 # goto ALL_DONE;
@@ -26,6 +27,7 @@ sub my_engine
   my $sEngine = shift;
   $WWW::Search::Test::oSearch = new WWW::Search($sEngine);
   ok(ref($WWW::Search::Test::oSearch), "instantiate WWW::Search::$sEngine object");
+  $WWW::Search::Test::oSearch->env_proxy('yes');
   } # my_engine
 
 sub my_test
@@ -33,7 +35,7 @@ sub my_test
   # Same arguments as WWW::Search::Test::count_results()
   my ($sType, $sQuery, $iMin, $iMax, $iDebug, $iPrintResults) = @_;
   my $iCount = &count_results(@_);
-  cmp_ok($iCount, '>=', $iMin, qq{lower-bound num-hits for $sType query=$sQuery}) if defined $iMin;
+  cmp_ok($iMin, '<=', $iCount, qq{lower-bound num-hits for $sType query=$sQuery}) if defined $iMin;
   cmp_ok($iCount, '<=', $iMax, qq{upper-bound num-hits for $sType query=$sQuery}) if defined $iMax;
   } # my_test
 
